add database + logger library + redis queue

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,16 @@
 PORT =
 MONGODB_URL =
+
+LOG_LEVEL =
+#info | debug | warn | error | silent | trace | fatal
+
+OPEN_AI_KEY =
+OPEN_AI_ENDPOINT=
+OPEN_AI_DEPLOYMENT=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_QUEUE_LIMITER_MAX =
+REDIS_QUEUE_LIMITER_DURATION =
+REDIS_QUEUE_REMOVE_ON_COMPLETE_AGE =
+REDIS_QUEUE_LOCK_DURATION =
