--- a/package.json
+++ b/package.json
@@ -25,11 +25,32 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@nestjs/bull": "^11.0.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/websockets": "^11.0.12",
+    "bull": "^4.16.5",
+    "cache-manager": "^6.4.1",
+    "cache-manager-redis-yet": "^5.1.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.2",
+    "nestjs-pino": "^4.4.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "tinyld": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
