--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.38",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.2",
+    "@langchain/qdrant": "^0.1.2",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.1",
@@ -39,12 +43,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.8.0",
+    "d3-dsv": "2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "langchain": "^0.3.19",
     "lodash": "^4.17.21",
+    "mammoth": "^1.9.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.2",
     "nestjs-pino": "^4.4.0",
+    "pdf-parse": "^1.1.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
@@ -62,6 +70,7 @@
     "@swc/core": "^1.10.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
