--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - redis_data:/data
   qdrant:
     image: qdrant/qdrant
-    container_name: qdrant
+    restart: unless-stopped
     ports:
       - '6333:6333'
       - '6334:6334'
