--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.2",
     "@langchain/community": "^0.3.38",
     "@langchain/core": "^0.3.43",
     "@langchain/openai": "^0.5.2",
     "@langchain/qdrant": "^0.1.2",
     "@nestjs/bull": "^11.0.2",
-    "@nestjs/cache-manager": "^3.0.0",
+    "@nestjs/cache-manager": "2.2.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
@@ -38,8 +39,9 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/websockets": "^11.0.12",
     "bull": "^4.16.5",
-    "cache-manager": "^6.4.1",
+    "cache-manager": "5.4.0",
     "cache-manager-redis-yet": "^5.1.5",
+    "cacheable": "^1.8.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.8.0",
@@ -85,7 +87,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typescript": "5.1.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
