--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/websockets": "^11.0.12",
+    "@nestjs/platform-socket.io": "^11.0.16",
+    "@nestjs/websockets": "^11.0.16",
     "bson": "^6.10.3",
     "bull": "^4.16.5",
     "cache-manager": "5.4.0",
@@ -61,7 +62,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "tinyld": "^1.3.4"
+    "tinyld": "^1.3.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
